--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body {
   margin: 0;
   font-family: "Heebo", sans-serif;
-  padding-top: 80px;
+  padding-top: 70px;
 }
 
 .container {
-  width: 1440px;
+  width: 1180px;
   max-width: 90%;
   margin: auto;
   padding: 0 16px;
@@ -19,7 +19,7 @@ ul {
 header {
   background-color: #f0f0f0;
   box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.15);
-  height: 80px;
+  height: 70px;
   position: fixed;
   top: 0;
   left: 0;
@@ -27,16 +27,19 @@ header {
   z-index: 1;
 }
 
-header .container {
+.container-head {
   display: flex;
   align-items: center;
+  padding: 0 8px;
   justify-content: space-between;
   height: 100%;
 }
 
-header .logo {
+.logo {
   display: inline-block;
   font-size: 27px;
+  margin-left: 115px;
+  width: auto;
 }
 
 header .logo a {
@@ -53,8 +56,9 @@ header .logo .blue-dot {
   border-radius: 6px;
 }
 
-header nav {
+.menu-nav {
   display: inline-block;
+  margin-right: 115px;
 }
 
 header nav ul li {
@@ -89,26 +93,15 @@ header nav ul li:last-of-type a {
 
 /* HERO SECTION */
 
-section.hero {
+.hero {
   position: relative;
-}
-
-section.hero img {
   width: 100%;
-  height: auto;
-  filter: blur(0.5px);
-}
-
-section.hero #slider {
-  width: 100%;
-  /* max-width: 500px; */
   height: 40vw;
-  /* max-height: 150px; */
-
   position: relative;
 }
 
-section.hero #slider img {
+.slider img {
+  filter: blur(0.5px);
   opacity: 0;
   position: absolute;
   width: 100%;
@@ -119,20 +112,18 @@ section.hero #slider img {
   transition: opacity 800ms;
 }
 
-section.hero #slider img.selected {
+.slider .selected {
   opacity: 1;
 }
 
 .hero-content {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 150px;
+  left: 200px;
   z-index: 0;
 }
 
-.hero-content .container {
+.container-hero {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -142,7 +133,7 @@ section.hero #slider img.selected {
 .hero-content h1 {
   max-width: 495px;
   color: white;
-  font-size: 100px;
+  font-size: 44px;
   letter-spacing: 1.25px;
   line-height: 56px;
   margin-bottom: 16px;
@@ -155,21 +146,21 @@ section.hero #slider img.selected {
   color: white;
   font-weight: 300;
   font-size: 17px;
-  letter-spacing: 0.5px;
-  line-height: 28px;
-  margin-bottom: 10px;
+  letter-spacing: 1.1px;
+  line-height: 50px;
+  margin-bottom: 12px;
   margin-top: 0;
   margin-left: 5%;
 }
 
-.hero-content p {
+.hero-p {
   max-width: 518px;
   color: white;
   font-weight: 300;
-  font-size: 20px;
-  letter-spacing: 0.5px;
-  line-height: 28px;
-  margin-bottom: 21px;
+  font-size: 18px;
+  letter-spacing: 0.45px;
+  line-height: 26px;
+  margin-bottom: 12px;
   margin-top: 0;
   margin-left: 1%;
 }
@@ -181,10 +172,10 @@ section.hero #slider img.selected {
   border-radius: 92px;
   background-color: #4e6e5d;
   color: #fff;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 700;
-  letter-spacing: 0.4px;
-  line-height: 24px;
+  letter-spacing: 0.35px;
+  line-height: 21px;
   text-align: center;
   border: none;
   text-transform: uppercase;
@@ -287,15 +278,16 @@ section.legal-services .services-slider .service .service-info .info {
 
 section.newsletter {
   background-color: rgba(200, 200, 200, 0.18);
-  max-width: 955px;
+  width: 881px;
+  max-width: 100%; /* ?  */
   text-align: center;
-  padding: 72px 0;
-  margin: 80px auto;
+  padding: 50px 0;
+  margin: 70px auto;
 }
 
 section.newsletter h3 {
-  font-size: 24px;
-  letter-spacing: 0.6px;
+  font-size: 22px;
+  letter-spacing: 0.55px;
   line-height: 42px;
   font-weight: normal;
   margin-top: 0;
@@ -303,11 +295,11 @@ section.newsletter h3 {
 }
 
 section.newsletter p {
-  font-size: 16px;
-  letter-spacing: 0.4px;
+  font-size: 14px;
+  letter-spacing: 0.35px;
   line-height: 42px;
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 section.newsletter form {
@@ -324,9 +316,9 @@ section.newsletter form input {
   border: 1px solid #3e3e3e;
   border-right: none;
   color: #3e3e3e;
-  font-size: 14px;
-  letter-spacing: 0.35px;
-  line-height: 21px;
+  font-size: 12px;
+  letter-spacing: 0.3px;
+  line-height: 18px;
   padding-left: 22px;
 }
 
@@ -339,9 +331,9 @@ section.newsletter form button {
   background-color: #3e50e5;
   border: 1px solid #3e50e5;
   color: #fff;
-  font-size: 14px;
-  letter-spacing: 0.35px;
-  line-height: 21px;
+  font-size: 12px;
+  letter-spacing: 0.3px;
+  line-height: 18px;
   text-transform: uppercase;
   cursor: pointer;
 }
@@ -356,12 +348,13 @@ section.newsletter form button:hover {
 /* FOOTER SECTION */
 
 footer .bottom-nav {
-  padding: 60px 0;
+  padding: 50px 0;
   background-color: #3e3e3e;
 }
 
 footer .bottom-nav .container {
-  max-width: 955px;
+  width: 955px;
+  max-width: 90%;
   display: flex;
   justify-content: space-evenly;
 }
@@ -372,8 +365,8 @@ footer .bottom-nav ul {
 
 footer .bottom-nav ul li a {
   color: white;
-  font-size: 16px;
-  letter-spacing: 0.4px;
+  font-size: 14px;
+  letter-spacing: 0.35px;
   line-height: 22px;
   margin-top: 0;
   margin-bottom: 10px;
@@ -386,24 +379,24 @@ footer .bottom-nav ul li a:hover {
 }
 
 footer .bottom-nav ul li.list-title {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 700;
   letter-spacing: 0.5px;
   line-height: 26px;
   margin-top: 0;
-  margin-bottom: 20px;
+  margin-bottom: 12px;
   color: white;
 }
 
 footer .copyright-text {
   color: white;
   background-color: #2b2b2b;
-  height: 60px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 16px;
-  letter-spacing: 0.4px;
+  font-size: 14px;
+  letter-spacing: 0.35px;
   line-height: 22px;
 }
 
@@ -532,7 +525,7 @@ section.about-us .about-us-part .montreal-info .info {
 ******************************************************/
 
 /* Start of Design for Small Desktop */
-@media screen and (max-width: 1440px) {
+/* @media screen and (max-width: 1440px) {
   .container {
     width: 1180px;
   }
@@ -667,7 +660,7 @@ section.about-us .about-us-part .montreal-info .info {
     line-height: 22px;
     text-align: center;
   }
-}
+} */
 /* End of Design for Small Desktops */
 
 /* Start of Design for Tablets */
