--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Heebo", sans-serif;
+  font-family: "Inter", sans-serif;
   padding-top: 70px;
 }
 
@@ -30,7 +30,8 @@ ul {
 
 .logo {
   display: inline-block;
-  font-size: 27px;
+  font-size: 24px;
+  letter-spacing: -0.5px;
   margin-left: 115px;
   width: auto;
 }
@@ -138,8 +139,8 @@ header nav ul li:last-of-type a {
   max-width: 518px;
   color: white;
   font-weight: 300;
-  font-size: 17px;
-  letter-spacing: 1.1px;
+  font-size: 16px;
+  letter-spacing: -0.5px;
   line-height: 50px;
   margin-bottom: 12px;
   margin-top: 0;
@@ -242,6 +243,7 @@ header nav ul li:last-of-type a {
   margin-bottom: 20px;
   font-weight: normal;
   margin-top: 0;
+  text-decoration: underline;
 }
 
 .info-about {
