--- a/css/style.css
+++ b/css/style.css
@@ -385,6 +385,7 @@ header nav ul li:last-of-type a {
   text-align: center;
   padding: 50px 0;
   margin: 70px auto;
+  box-shadow: 0 20px 30px 0 rgba(0, 0, 0, 0.1);
 }
 
 .newsletter h3 {
