Reviews area added

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ header nav ul li:last-of-type a {
   opacity: 0;
   position: absolute;
   width: 100%;
-  height: 110%;
+  height: 100%;
 
   object-fit: cover;
 
@@ -182,10 +182,53 @@ header nav ul li:last-of-type a {
   border: 1px solid rgb(82, 117, 98);
 }
 
+/*********************** REVIEWS ***********************/
+.reviews {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  width: 960px;
+  margin: 20px auto;
+}
+
+.reviews h4 {
+  font-size: 12px;
+  font-style: normal;
+  padding: 0 10px;
+  text-align: center;
+  color: #343a40;
+}
+
+.magazine-logo {
+  width: 100px;
+  height: auto;
+  margin: 0 auto;
+}
+
+.h4--1 {
+  grid-column: 1;
+  grid-row: 1;
+}
+.h4--2 {
+  grid-column: 2;
+  grid-row: 1;
+}
+.h4--3 {
+  grid-column: 3;
+  grid-row: 1;
+}
+
+.logo--1 {
+  width: 120px;
+}
+
+.logo--3 {
+  width: 110px;
+  height: auto;
+}
 /*********************** ABOUT US ***********************/
 
 .about-us {
-  padding-top: 150px;
+  margin-top: 110px;
   color: #343a40;
 }
 
@@ -202,6 +245,7 @@ header nav ul li:last-of-type a {
   border: none;
   border-top: 6px solid #d3b88c;
   width: 66px;
+  margin-bottom: 30px;
 }
 
 .container-about {
@@ -278,7 +322,8 @@ header nav ul li:last-of-type a {
 /*********************** LEGAL SERVICES ***********************/
 
 .legal-services {
-  padding-top: 80px;
+  margin-top: 110px;
+  margin-bottom: 150px;
   color: #343a40;
 }
 
@@ -295,6 +340,7 @@ header nav ul li:last-of-type a {
   border: none;
   border-top: 6px solid #d3b88c;
   width: 66px;
+  margin-bottom: 30px;
 }
 
 .container-service {
@@ -302,7 +348,7 @@ header nav ul li:last-of-type a {
   grid-template-columns: repeat(3, 1fr);
   column-gap: 80px;
   width: 960px;
-  margin: 48px auto;
+  margin: 80px auto;
 }
 
 .container-service-2 {
@@ -316,7 +362,6 @@ header nav ul li:last-of-type a {
 .service-picture {
   width: 32px;
   height: 32px;
-  margin-bottom: 16px;
   stroke: #087f5b;
 }
 
@@ -324,8 +369,6 @@ header nav ul li:last-of-type a {
   font-size: 20px;
   letter-spacing: 0.5px;
   line-height: 26px;
-  margin-bottom: 16px;
-  margin-top: 0;
   color: #343a40;
   text-align: left;
 }
@@ -334,7 +377,6 @@ header nav ul li:last-of-type a {
   font-size: 18px;
   letter-spacing: 0.5px;
   line-height: 26px;
-  margin-bottom: 6px;
   font-weight: lighter;
 }
 
