Alteration in reviews section

--- a/css/style.css
+++ b/css/style.css
@@ -187,44 +187,40 @@ header nav ul li:last-of-type a {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 960px;
-  margin: 20px auto;
+  margin: 40px auto;
 }
 
 .reviews h4 {
-  font-size: 12px;
+  font-size: 10px;
   font-style: normal;
-  padding: 0 10px;
+  padding: 0 30px;
   text-align: center;
   color: #343a40;
 }
 
 .magazine-logo {
-  width: 100px;
+  width: 130px;
   height: auto;
   margin: 0 auto;
 }
 
 .h4--1 {
   grid-column: 1;
-  grid-row: 1;
+  grid-row: 2;
 }
 .h4--2 {
   grid-column: 2;
-  grid-row: 1;
+  grid-row: 2;
 }
 .h4--3 {
   grid-column: 3;
-  grid-row: 1;
+  grid-row: 2;
 }
 
 .logo--1 {
-  width: 120px;
+  width: 150px;
 }
 
-.logo--3 {
-  width: 110px;
-  height: auto;
-}
 /*********************** ABOUT US ***********************/
 
 .about-us {
@@ -307,7 +303,7 @@ header nav ul li:last-of-type a {
 .montreal-info {
   border-radius: 8px;
   width: 50%;
-  text-align: center;
+  text-align: right;
   padding: 40px;
   position: relative;
   left: 200px;
